fixing spacing bugs

--- a/styles.css
+++ b/styles.css
@@ -166,88 +166,92 @@ body {
 .nav#topnav a:hover,
 .nav#topnav a.active {
   color: white;
-} 
+}
 /* animation properties added here!!! */
 .card-collection {
-margin-top: 10px;
-position: relative;
-transition: transform 0.4s linear;
+  margin-top: 10px;
+  position: relative;
+  transition: transform 0.4s linear;
 }
-.animationFrame img{
-    opacity: 1;
-    display: block;
-    width: 100%;
-    height: auto;
-    transition: .5s ease;
-    backface-visibility: hidden;
-  }
-  .animationFrame img:hover{
-    background: rgb(181,178,178);
-    background: radial-gradient(circle, rgba(181,178,178,0.758140756302521) 36%, rgba(255,255,255,1) 100%);
-  }
-  
+.animationFrame img {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: 0.5s ease;
+  backface-visibility: hidden;
+}
+.animationFrame img:hover {
+  background: rgb(181, 178, 178);
+  background: radial-gradient(
+    circle,
+    rgba(181, 178, 178, 0.758140756302521) 36%,
+    rgba(255, 255, 255, 1) 100%
+  );
+}
+
 .rent-badge {
-    position: absolute;
-    bottom: 45px;
-    right: 2px;
-    font-size: 1.2em;
-  }
-  .rent-badge img{
-      width: 28px;
-      height: 28px;
+  position: absolute;
+  bottom: 45px;
+  right: 2px;
+  font-size: 1.2em;
+}
+.rent-badge img {
+  width: 28px;
+  height: 28px;
+}
+#card-col::before {
+  /* This will be showing up together with the .movie-card-body content*/
+  /* Therefore it will be transitioning together with it.*/
+  content: ""; /* to have a psuedo element display we need a content even if empty*/
+  /* same dimentions of the closest parent with a position value set (in this case, .movie-card-body itself*/
+  position: absolute;
+  width: 100%;
+  height: 20%;
+  bottom: -19%;
+  left: 10px;
+  /*linear-gradient is actually a background-image cssgradient.io*/
+  background: linear-gradient(
+    0deg,
+    rgba(var(--bg-tint), 1) 0%,
+    rgba(var(--bg-tint), 1) 19%,
+    rgba(var(--bg-tint), 0) 97%
+  );
+}
 
-    }
-    #card-col::before {
-        /* This will be showing up together with the .movie-card-body content*/
-        /* Therefore it will be transitioning together with it.*/
-        content: ""; /* to have a psuedo element display we need a content even if empty*/
-        /* same dimentions of the closest parent with a position value set (in this case, .movie-card-body itself*/
-        position: absolute;
-        width: 100%;
-        height: 20%;
-        bottom: -19%;
-        left: 10px;
-        /*linear-gradient is actually a background-image cssgradient.io*/
-        background: linear-gradient(
-          0deg,
-          rgba(var(--bg-tint), 1) 0%,
-          rgba(var(--bg-tint), 1) 19%,
-          rgba(var(--bg-tint), 0) 97%
-        );
-      }
-   
-    #card-col a{
-        display: none;
-    }
-     #card-col :hover{
-        background: rgb(66, 66, 66);
-       background-clip: border-box;
-        background-size: cover; 
-    }
-    .overlay{
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        height: 100%;
-        width: 100%;
-        opacity: 0;
-        transition: .5s ease;
-        background-color: #5e5e5e;
-    }
-    .cardForAnim:hover .overlay {
-        opacity: 30%;
-      }
-      
-    .cardForAnim{
-        position: relative;
-    }
+#card-col a {
+  display: none;
+}
+#card-col :hover {
+  background: rgb(66, 66, 66);
+  background-clip: border-box;
+  background-size: cover;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: 0.5s ease;
+  background-color: #5e5e5e;
+}
+.cardForAnim:hover .overlay {
+  opacity: 30%;
+}
 
-   
+.cardForAnim {
+  position: relative;
+}
+
 /* end of animation properties!!! */
 
-.card-collection .allcaps, .card-collection .genres { /* #THROWBACKTHURSDAY and Classifiche*/
+.card-collection .allcaps,
+.card-collection .genres {
+  /* #THROWBACKTHURSDAY and Classifiche*/
   padding-left: 5px;
   color: white;
   font-size: 1.7em;
@@ -548,34 +552,37 @@ transition: transform 0.4s linear;
 /* **************** END OF ALBUM PAGE ********************** */
 
 /* **************** FOOTER MUSIC PLAYER ********************** */
-#footer-login, #footer-login > h6 { /* login page footer */
-font-size: xx-small;
+#footer-login,
+#footer-login > h6 {
+  /* login page footer */
+  font-size: xx-small;
+  padding-top: 0;
 }
-.items:hover{
-color: #ffff;
+.items:hover {
+  color: #ffff;
 }
-#footer-home{ 
-z-index: 2;
-padding-top: 10px; /*20px*/
-background-color: #383535;
-position: fixed;
-left:0;
-bottom: 0;
-height: 75px; /* IMPORTANT: has been matched to screenshot (was 100px) */
-width: 100%;
+#footer-home {
+  z-index: 2;
+  padding-top: 10px; /*20px*/
+  background-color: #383535;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  height: 75px; /* IMPORTANT: has been matched to screenshot (was 100px) */
+  width: 100%;
 }
-.radiohead:hover{
-    text-decoration: underline;
+.radiohead:hover {
+  text-decoration: underline;
 }
-.creep:hover{
-    text-decoration: underline;
+.creep:hover {
+  text-decoration: underline;
 }
 
-.player{
-flex-wrap: nowrap;
-flex-direction: row;
+.player {
+  flex-wrap: nowrap;
+  flex-direction: row;
 }
-#nowPlaying{
+#nowPlaying {
   align-self: center;
   padding-bottom: 50px;
   align-content: center;
